@@ -1,11 +1,9 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    kotlin("jvm") version "1.3.71"
-    idea
+    kotlin("jvm")
     java
-    id("io.freefair.lombok") version "4.1.6"
-    kotlin("kapt") version "1.3.61"
+    id("io.freefair.lombok") version "5.1.0"
 }
 
 group = "com.gakshintala.mylab"
@@ -13,16 +11,14 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     jcenter()
-    maven(url = "https://dl.bintray.com/arrow-kt/arrow-kt/")
-    maven(url = "https://oss.jfrog.org/artifactory/oss-snapshot-local/")
+    maven("https://dl.bintray.com/arrow-kt/arrow-kt/")
+    maven("https://oss.jfrog.org/artifactory/oss-snapshot-local/")
 }
 
-val arrowSnapshotVersion = "0.11.0-SNAPSHOT"
-val arrowVersion = "0.10.4"
+val arrowSnapshotVersion = "latest.integration"
+val arrowVersion = "latest.integration"
 
 dependencies {
-    implementation(kotlin("stdlib-jdk8"))    
-
     implementation("io.arrow-kt:arrow-core:$arrowSnapshotVersion")
     implementation("io.arrow-kt:arrow-fx:$arrowSnapshotVersion")
     implementation("io.arrow-kt:arrow-fx-rx2:$arrowSnapshotVersion")
@@ -31,17 +27,16 @@ dependencies {
     implementation("io.arrow-kt:arrow-syntax:$arrowSnapshotVersion")
     implementation("io.arrow-kt:arrow-mtl:$arrowVersion")
 
-    kapt("io.arrow-kt:arrow-meta:$arrowSnapshotVersion")
-
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:+")
     implementation("io.reactivex.rxjava2:rxjava:+")
 
-    testImplementation("org.junit.jupiter:junit-jupiter:+") {
-        exclude(group="junit", module="junit")
-    }
-    testImplementation("org.amshove.kluent:kluent:+") {
-        exclude(group="junit", module="junit")
-    }
+    testImplementation("org.junit.jupiter:junit-jupiter-api:+")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:+")
+
+    /*testImplementation("org.amshove.kluent:kluent:+") {
+        exclude("junit", "junit")
+        exclude("org.junit.vintage", "junit-vintage-engine")
+    }*/
 
     implementation("org.codehaus.jackson:jackson-mapper-asl:+")
     implementation("com.google.code.gson:gson:+")
@@ -53,7 +48,7 @@ dependencies {
     implementation("org.apache.commons:commons-text:+")
     implementation("io.vavr:vavr:+")
 
-    /*implementation("com.oath.cyclops:cyclops:10.3.0")   
+    /*implementation("com.oath.cyclops:cyclops:10.3.0")
     implementation("com.oath.cyclops:cyclops-pure:10.3.0")
     implementation("com.oath.cyclops:cyclops-vavr-integration:10.0.0-M1")
     implementation("com.oath.cyclops:cyclops-anym:10.3.3")*/
@@ -65,13 +60,29 @@ dependencies {
     testAnnotationProcessor("org.projectlombok:lombok:+")*/
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_14
+    targetCompatibility = JavaVersion.VERSION_14
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+    options.isWarnings = false
+}
+
 tasks.withType<KotlinCompile> {
     kotlinOptions {
-        jvmTarget = "12"
-        freeCompilerArgs = listOf("-Xjsr305=strict", "-Xjvm-default=enable")
+        jvmTarget = JavaVersion.VERSION_14.toString()
+        freeCompilerArgs = listOf("-Xjsr305=strict", "-Xjvm-default=enable") // These are related to Java Kotlin interop
+        suppressWarnings = true
     }
 }
 
 tasks.withType<Test> {
-    useJUnitPlatform()
+    ignoreFailures = true
+    useJUnitPlatform {
+        includeEngines("junit-jupiter")
+        excludeEngines("junit-vintage")
+    }
+    jvmArgs("--enable-preview")
 }
